--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "devDependencies": {
     "grunt-contrib-jshint": "~0.1.1",
     "should": "~1.2.1",
-    "phantom": "~0.4.1"
+    "phantom": "~0.4.1",
+    "mocha": "~1.8.1"
   },
   "dependencies": {
     "grunt": "~0.4.0",
