--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "grunt-contrib-jshint": "~0.1.1",
     "should": "~1.2.1",
     "phantom": "~0.4.1",
-    "mocha": "~1.8.1"
+    "mocha": "~1.8.1",
+    "coffee-script": "~1.4.0"
   },
   "dependencies": {
     "grunt": "~0.4.0",
