--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-qunit-serverless",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "A serverless version of the grunt-qunit task",
   "main": "tasks/qunit-serverless.js",
   "scripts": {
@@ -25,7 +25,9 @@
     "phantom": "~0.4.1",
     "mocha": "~1.8.1",
     "coffee-script": "~1.4.0",
-    "grunt-mocha-cli": "~1.4.0"
+    "grunt-mocha-cli": "~1.4.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.0"
